:sparkles: Add header component

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -2,6 +2,7 @@
 @import './media.styl'
 @import './text.styl'
 @import './utils.styl'
+@import './themes/default.styl'
 
 html, body
   height: 100%
