--- a/src/style/themes/default.styl
+++ b/src/style/themes/default.styl
@@ -4,7 +4,7 @@
   background-color: #FFFFE8
 
   // text styles
-  .xxs:
+  .xxs
     font-size: pxToRem(12)
     line-height: (14 / 12)
   .xs
@@ -28,7 +28,7 @@
   .gigantic
     font-size: pxToRem(45)
     line-height: (54  / 45)
-  .gargantuan:
+  .gargantuan
     font-size: pxToRem(202)
     line-height: (178 / 202)
     letter-spacing: tracking(-40)
