:sparkles: Add forecasts

--- a/src/components/header/style.styl
+++ b/src/components/header/style.styl
@@ -4,10 +4,10 @@
   display: flex
   justify-content: space-between
 
-.left
+.info
   display: flex
 
-.leftTempCol
+.temperature
   width: pxToRem(245)
   margin-right: pxToRem(30)
 
@@ -17,6 +17,6 @@
 .thirdRow
   margin-top: pxToRem(10)
 
-.right
+.switches
   display: flex
   childrenSpacingX(pxToRem(60))
