:sparkles: Add top and bottom lines

--- a/src/style/themes/default.styl
+++ b/src/style/themes/default.styl
@@ -33,3 +33,11 @@
     line-height: (178 / 202)
     letter-spacing: tracking(-40)
 
+  .top-line
+    background: linear-gradient(#C42BF2, #000AFF)
+
+  .bottomBox
+    background-color: #002CD9
+
+  .bottom
+    color: #C42BF2
