--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -30,3 +30,22 @@ html, body
 
 h2
   font-weight: normal
+
+.top-line
+  position: absolute
+  top: 0
+  left: 0
+  width: 100%
+  height: pxToRem(5)
+
+.bottom
+  width: pxToRem(1880)
+  height: pxToRem(50)
+  margin: 0 auto
+
+.bottomBox
+  position: absolute
+  bottom: 0
+  left: 0
+  width: 100%
+  padding: pxToRem(20) 0
