--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -42,6 +42,9 @@ h2
   width: pxToRem(1880)
   height: pxToRem(50)
   margin: 0 auto
+  +tablet()
+    width: pxToRem(1880)
+    margin-left: pxToRem(20)
 
 .bottomBox
   position: absolute
@@ -49,3 +52,13 @@ h2
   left: 0
   width: 100%
   padding: pxToRem(20) 0
+  overflow: hidden
+  +tablet()
+    &:after
+      display: block
+      content: ''
+      position: absolute
+      right: 0
+      top: 0
+      height: 100%
+      width: pxToRem(20)
