--- a/src/style/media.styl
+++ b/src/style/media.styl
@@ -2,7 +2,7 @@
 @import './utils.styl'
 
 desktop()
-  @media (min-width: $MOBILE_BP)
+  @media (min-width: $TABLET_BP)
     {block}
 
 tablet()
@@ -14,13 +14,13 @@ mobile()
     {block}
 
 desktopOnly()
-  +tablet()
+  @media (max-width: $TABLET_BP)
     display: none
 
 tabletOnly()
-  +mobile()
+  @media (max-width: $MOBILE_BP), (min-width: $TABLET_BP)
     display: none
 
 mobileOnly()
-  +desktop()
-    hide()
+  @media (min-width: $MOBILE_BP)
+    display: none
