:lipstick: Fix top line gradient

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -31,6 +31,12 @@ html, body
 h2
   font-weight: normal
 
+@keyframes topline-animation {
+  0% { background-position:0% 50% }
+  50% { background-position:100% 50% }
+  100% { background-position:0% 50% }
+}
+
 .top-line
   position: absolute
   top: 0
