--- a/src/style/themes/default.styl
+++ b/src/style/themes/default.styl
@@ -51,7 +51,9 @@
       font-family: GrtskTera
 
   .top-line
-    background: linear-gradient(#C42BF2, #000AFF)
+    background: linear-gradient(90deg, #C42BF2, #000AFF)
+    animation: topline-animation 5s ease infinite
+    background-size: 400% 400%
 
   .bottomBox
     background-color: #002CD9
