:lipstick: Align forecast to the bottom

--- a/src/routes/home/style.styl
+++ b/src/routes/home/style.styl
@@ -6,15 +6,18 @@
   position: relative
   padding: pxToRem(60)
   padding-bottom: pxToRem(180)
+  display: flex
+  flex-direction: column
   +tablet()
     padding: pxToRem(60) pxToRem(80) pxToRem(180)
 
 .slogan
   text-align: center
   margin-top: pxToRem(50)
+  margin-bottom: pxToRem(120)
 
 .forecast
-  margin-top: pxToRem(120)
+  margin-top: auto
 
 .row
   display: flex
