:lipstick: Add fonts fallback

--- a/src/routes/home/style.styl
+++ b/src/routes/home/style.styl
@@ -63,4 +63,4 @@
   margin-top: pxToRem(7)
 
 .firstItem
-  font-family: GrtskPetaBkslnt !important
+  font-family: GrtskPetaBkslnt, Helvetica, sans-serif !important
