--- a/src/style/themes/default.styl
+++ b/src/style/themes/default.styl
@@ -8,33 +8,33 @@
   .xxs
     font-size: pxToRem(12)
     line-height: (14 / 12)
-    font-family: GrtskPeta
+    font-family: GrtskPeta, Helvetica, sans-serif
   .xs
     font-size: pxToRem(14)
     line-height: (17 / 14)
-    font-family: GrtskPeta
+    font-family: GrtskPeta, Helvetica, sans-serif
   .s
     font-size: pxToRem(19)
     line-height: (23 / 19)
-    font-family: GrtskPetaBkslnt
+    font-family: GrtskPetaBkslnt, Helvetica, sans-serif
   .m
     font-size: pxToRem(19)
     line-height: (27 / 19)
-    font-family: GrtskPeta
+    font-family: GrtskPeta, Helvetica, sans-serif
   .l
     font-size: pxToRem(21)
     line-height: (25 / 21)
-    font-family: GrtskPeta
+    font-family: GrtskPeta, Helvetica, sans-serif
     font-weight: 600
   .xl
     font-size: pxToRem(22)
     line-height: (26 / 22)
-    font-family: GrtskMega
+    font-family: GrtskMega, Helvetica, sans-serif
     font-weight: 600
   .xxl
     font-size: pxToRem(27)
     line-height: (32 / 27)
-    font-family: GrtskPeta
+    font-family: GrtskPeta, Helvetica, sans-serif
   .gigantic
     font-size: pxToRem(45)
     line-height: (54  / 45)
@@ -43,12 +43,12 @@
     font-size: pxToRem(202)
     line-height: (178 / 202)
     letter-spacing: tracking(-40)
-    font-family: GrtskGiga
+    font-family: GrtskGiga, Helvetica, sans-serif
     font-weight: 500
     +tablet()
       font-size: pxToRem(185)
       line-height: (163 / 185)
-      font-family: GrtskTera
+      font-family: GrtskTera, Helvetica, sans-serif
 
   .top-line
     background: linear-gradient(90deg, #C42BF2, #000AFF)
