--- a/src/style/themes/default.styl
+++ b/src/style/themes/default.styl
@@ -39,6 +39,9 @@
     font-size: pxToRem(45)
     line-height: (54  / 45)
     font-family: GrtskPeta
+    +mobile()
+      font-size: pxToRem(28)
+      line-height: (34  / 28)
   .gargantuan
     font-size: pxToRem(202)
     line-height: (178 / 202)
@@ -49,6 +52,10 @@
       font-size: pxToRem(185)
       line-height: (163 / 185)
       font-family: GrtskTera, Helvetica, sans-serif
+    +mobile()
+      font-size: pxToRem(130)
+      line-height: (115 / 130)
+      font-family: GrtskZetta, Helvetica, sans-serif
 
   .top-line
     background: linear-gradient(90deg, #C42BF2, #000AFF)
