:lipstick: Swap forecast rows, reduce bottom padding

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -59,7 +59,7 @@ h2
   bottom: 0
   left: 0
   width: 100%
-  padding: pxToRem(20) 0
+  padding: pxToRem(14) 0 pxToRem(17)
   overflow: hidden
   +tablet()
     &:after
