--- a/src/components/switch/style.styl
+++ b/src/components/switch/style.styl
@@ -39,21 +39,19 @@
   right: 0
   bottom: 0
   pointer-events: none
-  border: pxToRem(2) solid black
+  box-shadow: 0 0 0 pxToRem(2) black
 
 .switchSlider:before
   position: absolute
   content: ""
-  height: pxToRem(13)
-  width: pxToRem(13)
-  left: - pxToRem(1)
-  top: - pxToRem(2)
+  height: pxToRem(14)
+  width: pxToRem(14)
   background-color: black
   border-radius: 9999px
   transition: transform 200ms ease
 
 .switchInput:checked + .switchSlider:before
-  transform: translateX(pxToRem(13))
+  transform: translateX(pxToRem(15))
 
 .switchSlider
   border-radius: 9999px
