:lipstick: Center slogan on tall screens

--- a/src/routes/home/style.styl
+++ b/src/routes/home/style.styl
@@ -17,6 +17,10 @@
   text-align: center
   margin-top: pxToRem(50)
   margin-bottom: pxToRem(120)
+  flex: 1
+  display: flex
+  align-items: center
+  justify-content: center
   +mobile()
     margin-top: pxToRem(25)
     margin-bottom: pxToRem(100)
