:lipstick: Update linear gradient

--- a/src/style/themes/default.styl
+++ b/src/style/themes/default.styl
@@ -58,8 +58,8 @@
       font-family: GrtskZetta, Helvetica, sans-serif
 
   .top-line
-    background: linear-gradient(90deg, #C42BF2, #000AFF)
-    animation: topline-animation 5s ease infinite
+    background: linear-gradient(270deg, #c42bf2, #ffff05, #aee6d5, #000aff)
+    animation: topline-animation 10s ease infinite
     background-size: 400% 400%
 
   .bottomBox
