:sparkles: Use variable font

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -1,6 +1,7 @@
 @import './consts.styl'
 @import './media.styl'
 @import './text.styl'
+@import './fonts.styl'
 @import './utils.styl'
 @import './themes/default.styl'
 
