:bug: Add zero slant for safari

--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -3,14 +3,14 @@
 grtskPeta()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
-    font-variation-settings: 'wdth' 300, 'wght' 400
+    font-variation-settings: 'wdth' 300, 'wght' 400, 'slnt' 0
   +noVariable()
     font-family: GrtskPeta, Helvetica, sans-serif
 
 grtskPetaSemiBold()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
-    font-variation-settings: 'wdth' 300, 'wght' 810
+    font-variation-settings: 'wdth' 300, 'wght' 810, 'slnt' 0
   +noVariable()
     font-family: GrtskPeta, Helvetica, sans-serif
     font-weight: 600
@@ -25,7 +25,7 @@ grtskPetaBkslnt()
 grtskMega()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
-    font-variation-settings: 'wdth' 1000, 'wght' 810
+    font-variation-settings: 'wdth' 1000, 'wght' 810, 'slnt' 0
   +noVariable()
     font-family: GrtskMega, Helvetica, sans-serif
     font-weight: 600
@@ -33,7 +33,7 @@ grtskMega()
 grtskGiga()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
-    font-variation-settings: 'wdth' 760, 'wght' 590
+    font-variation-settings: 'wdth' 760, 'wght' 590, 'slnt' 0
   +noVariable()
     font-family: GrtskGiga, Helvetica, sans-serif
     font-weight: 500
@@ -41,7 +41,7 @@ grtskGiga()
 grtskTera()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
-    font-variation-settings: 'wdth' 530, 'wght' 590
+    font-variation-settings: 'wdth' 530, 'wght' 590, 'slnt' 0
   +noVariable()
     font-family: GrtskTera, Helvetica, sans-serif
     font-weight: 500
@@ -49,7 +49,7 @@ grtskTera()
 grtskZetta()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
-    font-variation-settings: 'wdth' 100, 'wght' 590
+    font-variation-settings: 'wdth' 100, 'wght' 590, 'slnt' 0
   +noVariable()
     font-family: GrtskZetta, Helvetica, sans-serif
     font-weight: 500
