:lipstick: Replace sun emoji with icon

--- a/src/components/header/style.styl
+++ b/src/components/header/style.styl
@@ -47,3 +47,12 @@
 .filterSwitch
   +mobile()
     display: none !important
+
+.iconBox
+  width: pxToRem(44)
+  height: pxToRem(44)
+  > svg
+    display: block
+  +mobile()
+    width: pxToRem(30)
+    height: pxToRem(30)
