:sparkles: Add sunny theme

--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -53,3 +53,19 @@ grtskZetta()
   +noVariable()
     font-family: GrtskZetta, Helvetica, sans-serif
     font-weight: 500
+
+grtskMegaMedium()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 1000, 'wght' 590, 'slnt' 0
+  +noVariable()
+    font-family: GrtskMega, Helvetica, sans-serif
+    font-weight: 500
+
+grtskExa()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 200, 'wght' 590, 'slnt' 0
+  +noVariable()
+    font-family: GrtskExa, Helvetica, sans-serif
+    font-weight: 500
