--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -30,6 +30,14 @@
 }
 
 @font-face {
+  font-family: "GrtskMega";
+  src:  url("/assets/fonts/GrtskMega-Medium.woff2") format("woff2"),
+  url("/assets/fonts/GrtskMega-Medium.otf") format("opentype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
   font-family: "GrtskPeta";
   src:  url("/assets/fonts/GrtskPeta-Regular.woff2") format("woff2"),
   url("/assets/fonts/GrtskPeta-Regular.otf") format("opentype");
@@ -65,6 +73,14 @@
   font-family: "GrtskZetta";
   src:  url("/assets/fonts/GrtskZetta-Medium.woff2") format("woff2"),
   url("/assets/fonts/GrtskZetta-Medium.otf") format("opentype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "GrtskExa";
+  src:  url("/assets/fonts/GrtskExa-Medium.woff2") format("woff2"),
+  url("/assets/fonts/GrtskExa-Medium.otf") format("opentype");
   font-weight: 500;
   font-style: normal;
 }
