--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -3,7 +3,9 @@
 @import './text.styl'
 @import './fonts.styl'
 @import './utils.styl'
+@import './themes/common.styl'
 @import './themes/default.styl'
+@import './themes/sunny.styl'
 
 html, body
   height: 100%
