:sparkles: Add cloudy theme

--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -46,7 +46,7 @@ grtskTera()
     font-family: GrtskTera, Helvetica, sans-serif
     font-weight: 500
 
-grtskZetta()
+grtskZettaMedium()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
     font-variation-settings: 'wdth' 100, 'wght' 590, 'slnt' 0
