--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -6,6 +6,7 @@
 @import './themes/common.styl'
 @import './themes/default.styl'
 @import './themes/sunny.styl'
+@import './themes/cloudy.styl'
 
 html, body
   height: 100%
