--- a/src/style/themes/default.styl
+++ b/src/style/themes/default.styl
@@ -18,7 +18,7 @@
     +mobile()
       font-size: pxToRem(130)
       line-height: (115 / 130)
-      grtskZetta()
+      grtskZettaMedium()
 
   .top-line
     background: linear-gradient(270deg, #c42bf2, #ffff05, #aee6d5, #000aff)
@@ -36,3 +36,12 @@
 
   .col-content
     border-top: 1px solid #D1D1BF
+
+  .switch-slider:before
+    background-color: black
+
+  .switch-slider
+    box-shadow: 0 0 0 pxToRem(2) black
+
+  .try-button
+    border: pxToRem(1) solid black
