--- a/src/style/themes/sunny.styl
+++ b/src/style/themes/sunny.styl
@@ -18,7 +18,7 @@
     +mobile()
       font-size: pxToRem(120)
       line-height: (125 / 120)
-      grtskZetta()
+      grtskZettaMedium()
 
   .gargantuanAlt
     font-size: pxToRem(276)
@@ -49,3 +49,12 @@
 
   .col-content
     border-top: 1px solid rgba(23, 23, 23, 0.2)
+
+  .switch-slider:before
+    background-color: black
+
+  .switch-slider
+    box-shadow: 0 0 0 pxToRem(2) black
+
+  .try-button
+    border: pxToRem(1) solid black
