:sparkles: Add snow theme

--- a/src/style/consts.styl
+++ b/src/style/consts.styl
@@ -5,7 +5,8 @@ $CANONIC_SCREEN_WIDTH_T = 1024px
 $CANONIC_SCREEN_WIDTH_M = 414px
 $ROOT_FONT_SIZE = 19px
 
-$BLACK = #000
+$BLACK = #171717
 $YELLOW = #FFE42B
 $GREY = #939393
+$BLUE = #002CD9
 
