--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -1,11 +1,20 @@
 @import '../style/media.styl'
 
+grtskPetaExtraLight()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 300, 'wght' 190, 'slnt' 0
+  +noVariable()
+    font-family: GrtskPeta, Helvetica, sans-serif
+    font-weight: 200
+
 grtskPeta()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
     font-variation-settings: 'wdth' 300, 'wght' 400, 'slnt' 0
   +noVariable()
     font-family: GrtskPeta, Helvetica, sans-serif
+    font-weight: 400
 
 grtskPetaSemiBold()
   +variable()
@@ -21,14 +30,7 @@ grtskPetaBkslnt()
     font-variation-settings: 'wdth' 300, 'wght' 400, 'slnt' -15
   +noVariable()
     font-family: GrtskPetaBkslnt, Helvetica, sans-serif
-
-grtskMega()
-  +variable()
-    font-family: GrtskVariable, Helvetica, sans-serif
-    font-variation-settings: 'wdth' 1000, 'wght' 810, 'slnt' 0
-  +noVariable()
-    font-family: GrtskMega, Helvetica, sans-serif
-    font-weight: 600
+    font-weight: 400
 
 grtskGiga()
   +variable()
@@ -38,6 +40,14 @@ grtskGiga()
     font-family: GrtskGiga, Helvetica, sans-serif
     font-weight: 500
 
+grtskTeraExtraLight()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 530, 'wght' 190, 'slnt' 0
+  +noVariable()
+    font-family: GrtskTera, Helvetica, sans-serif
+    font-weight: 200
+
 grtskTera()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
@@ -45,6 +55,22 @@ grtskTera()
   +noVariable()
     font-family: GrtskTera, Helvetica, sans-serif
     font-weight: 500
+
+grtskTeraBold()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 530, 'wght' 1000, 'slnt' 0
+  +noVariable()
+    font-family: GrtskTera, Helvetica, sans-serif
+    font-weight: 700
+
+grtskZettaExtraLight()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 100, 'wght' 190, 'slnt' 0
+  +noVariable()
+    font-family: GrtskZetta, Helvetica, sans-serif
+    font-weight: 200
 
 grtskZettaMedium()
   +variable()
@@ -54,6 +80,22 @@ grtskZettaMedium()
     font-family: GrtskZetta, Helvetica, sans-serif
     font-weight: 500
 
+grtskZettaBold()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 100, 'wght' 1000, 'slnt' 0
+  +noVariable()
+    font-family: GrtskZetta, Helvetica, sans-serif
+    font-weight: 700
+
+grtskMegaExtraLight()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 1000, 'wght' 190, 'slnt' 0
+  +noVariable()
+    font-family: GrtskMega, Helvetica, sans-serif
+    font-weight: 200
+
 grtskMegaMedium()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
@@ -61,6 +103,22 @@ grtskMegaMedium()
   +noVariable()
     font-family: GrtskMega, Helvetica, sans-serif
     font-weight: 500
+
+grtskMegaSemiBold()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 1000, 'wght' 810, 'slnt' 0
+  +noVariable()
+    font-family: GrtskMega, Helvetica, sans-serif
+    font-weight: 600
+
+grtskMegaBold()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 1000, 'wght' 1000, 'slnt' 0
+  +noVariable()
+    font-family: GrtskMega, Helvetica, sans-serif
+    font-weight: 700
 
 grtskExa()
   +variable()
