--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -23,9 +23,9 @@
 
 @font-face {
   font-family: "GrtskMega";
-  src:  url("/assets/fonts/GrtskMega-SemiBold.woff2") format("woff2"),
-  url("/assets/fonts/GrtskMega-SemiBold.otf") format("opentype");
-  font-weight: 600;
+  src:  url("/assets/fonts/GrtskMega-ExtraLight.woff2") format("woff2"),
+  url("/assets/fonts/GrtskMega-ExtraLight.otf") format("opentype");
+  font-weight: 200;
   font-style: normal;
 }
 
@@ -35,6 +35,51 @@
   url("/assets/fonts/GrtskMega-Medium.otf") format("opentype");
   font-weight: 500;
   font-style: normal;
+}
+
+@font-face {
+  font-family: "GrtskMega";
+  src:  url("/assets/fonts/GrtskMega-SemiBold.woff2") format("woff2"),
+  url("/assets/fonts/GrtskMega-SemiBold.otf") format("opentype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "GrtskMega";
+  src:  url("/assets/fonts/GrtskMega-Bold.woff2") format("woff2"),
+  url("/assets/fonts/GrtskMega-Bold.otf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "GrtskTera";
+  src:  url("/assets/fonts/GrtskTera-Extralight.woff2") format("woff2"),
+  url("/assets/fonts/GrtskTera-Extralight.otf") format("opentype");
+  font-weight: 200;
+}
+
+@font-face {
+  font-family: "GrtskTera";
+  src:  url("/assets/fonts/GrtskTera-Medium.woff2") format("woff2"),
+  url("/assets/fonts/GrtskTera-Medium.otf") format("opentype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "GrtskTera";
+  src:  url("/assets/fonts/GrtskTera-Bold.woff2") format("woff2"),
+  url("/assets/fonts/GrtskTera-Bold.otf") format("opentype");
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: "GrtskPeta";
+  src:  url("/assets/fonts/GrtskPeta-Extralight.woff2") format("woff2"),
+  url("/assets/fonts/GrtskPeta-Extralight.otf") format("opentype");
+  font-weight: 200;
 }
 
 @font-face {
@@ -62,10 +107,18 @@
 }
 
 @font-face {
-  font-family: "GrtskTera";
-  src:  url("/assets/fonts/GrtskTera-Medium.woff2") format("woff2"),
-  url("/assets/fonts/GrtskTera-Medium.otf") format("opentype");
-  font-weight: 500;
+  font-family: "GrtskPetaBkslnt";
+  src:  url("/assets/fonts/GrtskPetaBkslnt-Regular.woff2") format("woff2"),
+  url("/assets/fonts/GrtskPetaBkslnt-Regular.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "GrtskZetta";
+  src:  url("/assets/fonts/GrtskZetta-ExtraLight.woff2") format("woff2"),
+  url("/assets/fonts/GrtskZetta-ExtraLight.otf") format("opentype");
+  font-weight: 200;
   font-style: normal;
 }
 
@@ -74,6 +127,14 @@
   src:  url("/assets/fonts/GrtskZetta-Medium.woff2") format("woff2"),
   url("/assets/fonts/GrtskZetta-Medium.otf") format("opentype");
   font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "GrtskZetta";
+  src:  url("/assets/fonts/GrtskZetta-Bold.woff2") format("woff2"),
+  url("/assets/fonts/GrtskZetta-Bold.otf") format("opentype");
+  font-weight: 700;
   font-style: normal;
 }
 
