--- a/src/style/themes/common.styl
+++ b/src/style/themes/common.styl
@@ -25,7 +25,7 @@
 .xl
   font-size: pxToRem(22)
   line-height: (26 / 22)
-  grtskMega()
+  grtskMegaSemiBold()
 .xxl
   font-size: pxToRem(27)
   line-height: (32 / 27)
