--- a/src/style/themes/sunny.styl
+++ b/src/style/themes/sunny.styl
@@ -51,10 +51,10 @@
     border-top: 1px solid rgba(23, 23, 23, 0.2)
 
   .switch-slider:before
-    background-color: black
+    background-color: $BLACK
 
   .switch-slider
-    box-shadow: 0 0 0 pxToRem(2) black
+    box-shadow: 0 0 0 pxToRem(2) $BLACK
 
   .try-button
-    border: pxToRem(1) solid black
+    border: pxToRem(1) solid $BLACK
