--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -7,6 +7,7 @@
 @import './themes/default.styl'
 @import './themes/sunny.styl'
 @import './themes/cloudy.styl'
+@import './themes/snow.styl'
 
 html, body
   height: 100%
