--- a/src/style/themes/default.styl
+++ b/src/style/themes/default.styl
@@ -38,10 +38,10 @@
     border-top: 1px solid #D1D1BF
 
   .switch-slider:before
-    background-color: black
+    background-color: $BLACK
 
   .switch-slider
-    box-shadow: 0 0 0 pxToRem(2) black
+    box-shadow: 0 0 0 pxToRem(2) $BLACK
 
   .try-button
-    border: pxToRem(1) solid black
+    border: pxToRem(1) solid $BLACK
