--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -22,6 +22,13 @@
 }
 
 @font-face {
+  font-family: "GrtskGigaBkslnt";
+  src: url("/assets/fonts/GrtskGigaBkslnt-Medium.woff2") format("woff2"),
+    url("/assets/fonts/GrtskGigaBkslnt-Medium.otf") format("opentype");
+  font-weight: 500;
+}
+
+@font-face {
   font-family: "GrtskMega";
   src:  url("/assets/fonts/GrtskMega-ExtraLight.woff2") format("woff2"),
   url("/assets/fonts/GrtskMega-ExtraLight.otf") format("opentype");
@@ -144,4 +151,11 @@
   url("/assets/fonts/GrtskExa-Medium.otf") format("opentype");
   font-weight: 500;
   font-style: normal;
+}
+
+@font-face {
+	font-family: "GrtskExaBkslnt";
+	src: url("/assets/fonts/GrtskExaBkslnt-Regular.woff2") format("woff2"),
+	    url("/assets/fonts/GrtskExaBkslnt-Regular.otf") format("opentype");
+	font-weight: 400;
 }
