--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -8,6 +8,7 @@
 @import './themes/sunny.styl'
 @import './themes/cloudy.styl'
 @import './themes/snow.styl'
+@import './themes/partly-cloudy.styl'
 
 html, body
   height: 100%
