:sparkles: Add rain theme

--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -41,12 +41,20 @@ grtskGiga()
     font-weight: 500
 
 grtskGigaMediumBkslnt()
-	+variable()
-		font-family: GrtskVariable, Helvetica, sans-serif
-		font-variation-settings: 'wdth' 760, 'wght' 590, 'slnt' -15
-	+noVariable()
-		font-family: GrtskGigaBkslnt, Helvetica, sans-serif
-		font-weight: 500
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 760, 'wght' 590, 'slnt' -15
+  +noVariable()
+    font-family: GrtskGigaBkslnt, Helvetica, sans-serif
+    font-weight: 500
+
+grtskTeraThin()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 530, 'wght' 100, 'slnt' 0
+  +noVariable()
+    font-family: GrtskTera, Helvetica, sans-serif
+    font-weight: 100
 
 grtskTeraExtraLight()
   +variable()
@@ -96,6 +104,14 @@ grtskZettaBold()
     font-family: GrtskZetta, Helvetica, sans-serif
     font-weight: 700
 
+grtskMegaThin()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 1000, 'wght' 100, 'slnt' 0
+  +noVariable()
+    font-family: GrtskMega, Helvetica, sans-serif
+    font-weight: 100
+
 grtskMegaExtraLight()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
@@ -127,6 +143,14 @@ grtskMegaBold()
   +noVariable()
     font-family: GrtskMega, Helvetica, sans-serif
     font-weight: 700
+
+grtskExaExtralight()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 200, 'wght' 190, 'slnt' 0
+  +noVariable()
+    font-family: GrtskExa, Helvetica, sans-serif
+    font-weight: 200
 
 grtskExa()
   +variable()
