--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -30,6 +30,13 @@
 
 @font-face {
   font-family: "GrtskMega";
+  src: url("/assets/fonts/GrtskMega-Thin.woff2") format("woff2"),
+    url("/assets/fonts/GrtskMega-Thin.otf") format("opentype");
+  font-weight: 100;
+}
+
+@font-face {
+  font-family: "GrtskMega";
   src:  url("/assets/fonts/GrtskMega-ExtraLight.woff2") format("woff2"),
   url("/assets/fonts/GrtskMega-ExtraLight.otf") format("opentype");
   font-weight: 200;
@@ -58,6 +65,13 @@
   url("/assets/fonts/GrtskMega-Bold.otf") format("opentype");
   font-weight: 700;
   font-style: normal;
+}
+
+@font-face {
+  font-family: "GrtskTera";
+  src: url("/assets/fonts/GrtskTera-Thin.woff2") format("woff2"),
+    url("/assets/fonts/GrtskTera-Thin.otf") format("opentype");
+  font-weight: 100;
 }
 
 @font-face {
@@ -147,6 +161,13 @@
 
 @font-face {
   font-family: "GrtskExa";
+  src: url("/assets/fonts/GrtskExa-Extralight.woff2") format("woff2"),
+    url("/assets/fonts/GrtskExa-Extralight.otf") format("opentype");
+  font-weight: 200;
+}
+
+@font-face {
+  font-family: "GrtskExa";
   src:  url("/assets/fonts/GrtskExa-Medium.woff2") format("woff2"),
   url("/assets/fonts/GrtskExa-Medium.otf") format("opentype");
   font-weight: 500;
@@ -154,8 +175,8 @@
 }
 
 @font-face {
-	font-family: "GrtskExaBkslnt";
-	src: url("/assets/fonts/GrtskExaBkslnt-Regular.woff2") format("woff2"),
-	    url("/assets/fonts/GrtskExaBkslnt-Regular.otf") format("opentype");
-	font-weight: 400;
+  font-family: "GrtskExaBkslnt";
+  src: url("/assets/fonts/GrtskExaBkslnt-Regular.woff2") format("woff2"),
+    url("/assets/fonts/GrtskExaBkslnt-Regular.otf") format("opentype");
+  font-weight: 400;
 }
