--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -9,6 +9,7 @@
 @import './themes/cloudy.styl'
 @import './themes/snow.styl'
 @import './themes/partly-cloudy.styl'
+@import './themes/rain.styl'
 
 html, body
   height: 100%
