:sparkles: Add haze theme

--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -144,6 +144,14 @@ grtskMegaBold()
     font-family: GrtskMega, Helvetica, sans-serif
     font-weight: 700
 
+grtskExaThin()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 200, 'wght' 100, 'slnt' 0
+  +noVariable()
+    font-family: GrtskExa, Helvetica, sans-serif
+    font-weight: 100
+
 grtskExaExtralight()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
