--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -161,6 +161,14 @@
 
 @font-face {
   font-family: "GrtskExa";
+  src: url("/assets/fonts/GrtskExa-ThinItalic.woff2") format("woff2"),
+    url("/assets/fonts/GrtskExa-ThinItalic.otf") format("opentype");
+  font-weight: 100;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "GrtskExa";
   src: url("/assets/fonts/GrtskExa-Extralight.woff2") format("woff2"),
     url("/assets/fonts/GrtskExa-Extralight.otf") format("opentype");
   font-weight: 200;
