--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -10,6 +10,7 @@
 @import './themes/snow.styl'
 @import './themes/partly-cloudy.styl'
 @import './themes/rain.styl'
+@import './themes/haze.styl'
 
 html, body
   height: 100%
