--- a/src/style/themes/rain.styl
+++ b/src/style/themes/rain.styl
@@ -14,7 +14,7 @@
     text-align: left
     grtskMegaThin()
     +tablet()
-      grtskTerThin()
+      grtskTeraThin()
       font-size: pxToRem(205)
       line-height: (186 / 205)
     +mobile()
