:sparkles: Add night theme

--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -153,6 +153,14 @@
 
 @font-face {
   font-family: "GrtskZetta";
+  src:  url("/assets/fonts/GrtskZetta-MediumItalic.woff2") format("woff2"),
+    url("/assets/fonts/GrtskZetta-MediumItalic.otf") format("opentype");
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "GrtskZetta";
   src:  url("/assets/fonts/GrtskZetta-Bold.woff2") format("woff2"),
   url("/assets/fonts/GrtskZetta-Bold.otf") format("opentype");
   font-weight: 700;
