--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -96,6 +96,15 @@ grtskZettaMedium()
     font-family: GrtskZetta, Helvetica, sans-serif
     font-weight: 500
 
+grtskZettaMediumItalic()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 100, 'wght' 590, 'slnt' 15
+  +noVariable()
+    font-family: GrtskZetta, Helvetica, sans-serif
+    font-weight: 500
+    font-style: italic
+
 grtskZettaBold()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
