--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -11,6 +11,7 @@
 @import './themes/partly-cloudy.styl'
 @import './themes/rain.styl'
 @import './themes/haze.styl'
+@import './themes/night.styl'
 
 html, body
   height: 100%
