:sparkles: Add windy theme

--- a/src/style/font-utils.styl
+++ b/src/style/font-utils.styl
@@ -64,6 +64,14 @@ grtskTeraExtraLight()
     font-family: GrtskTera, Helvetica, sans-serif
     font-weight: 200
 
+grtskTeraLight()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 530, 'wght' 280, 'slnt' 0
+  +noVariable()
+    font-family: GrtskTera, Helvetica, sans-serif
+    font-weight: 300
+
 grtskTera()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
@@ -87,6 +95,14 @@ grtskZettaExtraLight()
   +noVariable()
     font-family: GrtskZetta, Helvetica, sans-serif
     font-weight: 200
+
+grtskZettaLight()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 100, 'wght' 280, 'slnt' 0
+  +noVariable()
+    font-family: GrtskZetta, Helvetica, sans-serif
+    font-weight: 300
 
 grtskZettaMedium()
   +variable()
@@ -129,6 +145,14 @@ grtskMegaExtraLight()
     font-family: GrtskMega, Helvetica, sans-serif
     font-weight: 200
 
+grtskMegaLight()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 1000, 'wght' 280, 'slnt' 0
+  +noVariable()
+    font-family: GrtskMega, Helvetica, sans-serif
+    font-weight: 300
+
 grtskMegaMedium()
   +variable()
     font-family: GrtskVariable, Helvetica, sans-serif
@@ -168,6 +192,14 @@ grtskExaExtralight()
   +noVariable()
     font-family: GrtskExa, Helvetica, sans-serif
     font-weight: 200
+
+grtskExaLight()
+  +variable()
+    font-family: GrtskVariable, Helvetica, sans-serif
+    font-variation-settings: 'wdth' 200, 'wght' 280, 'slnt' 0
+  +noVariable()
+    font-family: GrtskExa, Helvetica, sans-serif
+    font-weight: 300
 
 grtskExa()
   +variable()
