--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -12,6 +12,7 @@
 @import './themes/rain.styl'
 @import './themes/haze.styl'
 @import './themes/night.styl'
+@import './themes/windy.styl'
 
 html, body
   height: 100%
