--- a/src/style/fonts.styl
+++ b/src/style/fonts.styl
@@ -45,6 +45,13 @@
 
 @font-face {
   font-family: "GrtskMega";
+  src:  url("/assets/fonts/GrtskMega-Light.woff2") format("woff2"),
+  url("/assets/fonts/GrtskMega-Light.otf") format("opentype");
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "GrtskMega";
   src:  url("/assets/fonts/GrtskMega-Medium.woff2") format("woff2"),
   url("/assets/fonts/GrtskMega-Medium.otf") format("opentype");
   font-weight: 500;
@@ -79,6 +86,13 @@
   src:  url("/assets/fonts/GrtskTera-Extralight.woff2") format("woff2"),
   url("/assets/fonts/GrtskTera-Extralight.otf") format("opentype");
   font-weight: 200;
+}
+
+@font-face {
+  font-family: "GrtskTera";
+  src:  url("/assets/fonts/GrtskTera-Light.woff2") format("woff2"),
+  url("/assets/fonts/GrtskTera-Light.otf") format("opentype");
+  font-weight: 300;
 }
 
 @font-face {
@@ -145,6 +159,13 @@
 
 @font-face {
   font-family: "GrtskZetta";
+  src: url("/assets/fonts/GrtskZetta-Light.woff2") format("woff2"),
+  url("/assets/fonts/GrtskZetta-Light.otf") format("opentype");
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: "GrtskZetta";
   src:  url("/assets/fonts/GrtskZetta-Medium.woff2") format("woff2"),
   url("/assets/fonts/GrtskZetta-Medium.otf") format("opentype");
   font-weight: 500;
@@ -180,6 +201,13 @@
   src: url("/assets/fonts/GrtskExa-Extralight.woff2") format("woff2"),
     url("/assets/fonts/GrtskExa-Extralight.otf") format("opentype");
   font-weight: 200;
+}
+
+@font-face {
+  font-family: "GrtskExa";
+  src:  url("/assets/fonts/GrtskExa-Light.woff2") format("woff2"),
+  url("/assets/fonts/GrtskExa-Light.otf") format("opentype");
+  font-weight: 300;
 }
 
 @font-face {
