:sparkles: Add mixed themes

--- a/src/style/index.styl
+++ b/src/style/index.styl
@@ -13,6 +13,7 @@
 @import './themes/haze.styl'
 @import './themes/night.styl'
 @import './themes/windy.styl'
+@import './themes/mixed-rain-and-snow.styl'
 
 html, body
   height: 100%
